incorporacion de la barra fija

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark" id="navbar" style="background-color: #050025">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark" id="navbar" style="background-color: #050025">
     <div id="mycontainer"class="container">
       
         <a class="navbar-brand" href="#">
