--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item pr-4 dropdown">
+            <li class="nav-item mr-4 dropdown efecto_hover_subrayado" >
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Servicios
               </a>
@@ -44,17 +44,17 @@
                 <a class="dropdown-item" href="#">Consultoria</a>
               </div>
             </li>
-            <li class="nav-item pr-4 ">
+            <li class="nav-item mr-4 ml-4 efecto_hover_subrayado">
               <a class="nav-link" href="#">Productos</span></a>
             </li>
-            <li class="nav-item pr-4">
+            <li class="nav-item mr-4 efecto_hover_subrayado">
               <a class="nav-link" href="#">Contacto</a>
             </li>
             
-            <li class="nav-item pr-4">
+            <li class="nav-item mr-4 efecto_hover_subrayado">
               <a class="nav-link" href="#">Sobre nosotros</a>
             </li>
-            <li class="nav-item pr-3 pl-3 d-none d-lg-block">
+            <li class="nav-item mr-3 ml-3 d-none d-lg-block">
               <a class="nav-link" href="#">
                 <img src="./src/img/icon/Vector.svg" alt="">
               </a>
@@ -64,7 +64,7 @@
                 <img src="./src/img/icon/Vector (1).svg" class="pr-4 pl-4"alt="">
               </a>
             </li>
-            <li class="nav-item pl-3 d-none d-lg-block" >
+            <li class="nav-item ml-3 d-none d-lg-block " >
               <a class="nav-link" href="#">
                 <img src="./src/img/icon/Vector (2).svg" alt="">
               </a>
