--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="./src/style.css">
   </head>
   <body>
+
+
+<!--       HEADER                -->    
 <header>
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark" id="navbar" style="background-color: #050025">
     <div id="mycontainer"class="container">
@@ -44,7 +47,7 @@
                 <a class="dropdown-item" href="#">Consultoria</a>
               </div>
             </li>
-            <li class="nav-item mr-4 ml-4 efecto_hover_subrayado">
+            <li class="nav-item mr-4 efecto_hover_subrayado">
               <a class="nav-link" href="#">Productos</span></a>
             </li>
             <li class="nav-item mr-4 efecto_hover_subrayado">
@@ -86,6 +89,12 @@
 </header>
 
 
+
+<!--       /HEADER                --> 
+
+<!--       SLIDER                --> 
+<!--       /SLIDER                --> 
+<!--       FOOTER                --> 
     <footer id="footer" class="pb-5 pt-5">
       <div class="container">
         <div class="row text-center">
@@ -120,9 +129,9 @@
                <div class="col-6 text-uppercase" id="titulo">
                  <h4 href="#">Informacion</h4>
                  <ul class="navbar-nav">
-                  <li class="nav-item text-center ml-0 text-lg-left pt-5 ml-lg-3" id="redirecion-footer"><a href="#">Home</a></li>
-                  <li class="nav-item text-center ml-0 text-lg-left pt-3 ml-lg-3" id="redirecion-footer"><a href="#">Servicios</a></li>
-                  <li class="nav-item text-center ml-0 text-lg-left pt-3 ml-lg-3" id="redirecion-footer"><a href="#">Productos</a></li>
+                  <li class="nav-item text-center ml-0 text-lg-left pt-5 ml-lg-3" id="redirecion-footer"><a href="#">Contacto</a></li>
+                  <li class="nav-item text-center ml-0 text-lg-left pt-3 ml-lg-3" id="redirecion-footer"><a href="#">SobreNosotros</a></li>
+                  <li class="nav-item text-center ml-0 text-lg-left pt-3 ml-lg-3" id="redirecion-footer"><a href="#">chat en linea</a></li>
                  </ul>
                 
                 </div>
@@ -135,6 +144,8 @@
         </div>
       </div>
     </footer>
+
+    <!--       /FOOTER               --> 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
